--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,5 +1,5 @@
-<link rel="icon" type="image/png" href="/assets/imgs/icons/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/assets/imgs/icons/favicon.svg" />
-<link rel="shortcut icon" href="/assets/imgs/icons/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/imgs/icons/apple-touch-icon.png" />
-<link rel="manifest" href="/assets/imgs/icons/site.webmanifest" />
+<link rel="icon" type="image/png" href="assets/imgs/icons/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="assets/imgs/icons/favicon.svg" />
+<link rel="shortcut icon" href="assets/imgs/icons/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="assets/imgs/icons/apple-touch-icon.png" />
+<link rel="manifest" href="assets/imgs/icons/site.webmanifest" />
